--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,6 +1,82 @@
+@charset "UTF-8";
+@font-face {
+  font-family: NeueHaasDisplayBlack;
+  src: url(../Font/NeueHaasDisplayBlack.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayBlackItalic;
+  src: url(../Font/NeueHaasDisplayBlackItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayBold;
+  src: url(../Font/NeueHaasDisplayBold.ttf);
+}
+
 @font-face {
   font-family: neueHaasDisplayRoman;
+  src: url(../Font/NeueHaasDisplayBoldItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayLight;
+  src: url(../Font/NeueHaasDisplayLight.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayLightItalic;
+  src: url(../Font/NeueHaasDisplayLightItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayMediu;
+  src: url(../Font/NeueHaasDisplayMediu.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayMediumItalic;
+  src: url(../Font/NeueHaasDisplayMediumItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayRoman;
   src: url(../Font/NeueHaasDisplayRoman.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayRomanItalic;
+  src: url(../Font/NeueHaasDisplayRomanItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayThin;
+  src: url(../Font/NeueHaasDisplayThin.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayMediu;
+  src: url(../Font/NeueHaasDisplayThinItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayXThin;
+  src: url(../Font/NeueHaasDisplayXThin.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayXThinItalic;
+  src: url(../Font/NeueHaasDisplayXThinItalic.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayXXThin;
+  src: url(../Font/NeueHaasDisplayXXThin.ttf);
+}
+
+@font-face {
+  font-family: NeueHaasDisplayXXThinItalic;
+  src: url(../Font/NeueHaasDisplayXXThinItalic.ttf);
 }
 
 * {
@@ -146,5 +222,99 @@
   color: #1D1D1B;
   line-height: 1.8;
   font-family: neueHaasDisplayRoman;
+}
+
+.main {
+  background-color: #F2F2F2;
+  padding-top: 10rem;
+  font-family: neueHaasDisplayRoman;
+}
+
+.main__div-überschrift {
+  margin: 0 0 5vh  11vw;
+  padding-left: 1rem;
+  border-left: 4px solid #be1622;
+}
+
+.main__projekte {
+  color: #be1622;
+  font-size: 16px;
+  font-family: neueHaasDisplayRoman;
+}
+
+.main__aktuelle {
+  font-size: 40px;
+  font-family: neueHaasDisplayRoman;
+  margin-bottom: 8rem;
+}
+
+.main__section {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 0 11rem 11rem 11rem;
+  gap: 30px;
+}
+
+.main__cart {
+  height: 489px;
+  width: 350px;
+  background: #fff;
+}
+
+.main__cart-img {
+  height: 200px;
+  width: 100%;
+}
+
+.main__cart-p {
+  font-size: 22px;
+  padding: 12px;
+  font-family: neueHaasDisplayRoman;
+}
+
+.main__objekt, .main__wohnfläche {
+  font-size: 15px;
+  padding: 10px;
+  color: #85857B;
+}
+
+.main__nummer, .main__circa {
+  font-size: 17px;
+  padding: 10px;
+  color: #000000;
+  font-weight: bolder;
+}
+
+.main__span-hell {
+  padding-left: 6.5rem;
+}
+
+.main__span-dunkel {
+  padding-left: 7rem;
+}
+
+.main__mehre-rfahren {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 2px solid #64645b2a;
+  padding-top: 1rem;
+}
+
+.main__button {
+  color: #be1622;
+  background: none;
+  border: none;
+  font-size: 16px;
+  padding-left: 6.5em;
+  font-weight: bold;
+}
+
+.main__phone-icon {
+  padding-left: 0.7rem;
+  color: #85857B;
 }
 /*# sourceMappingURL=style.css.map */
