--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -272,3 +272,50 @@
             color:#85857B ;
         }
 }
+
+.rechteck33{
+    display: flex;
+    background-color:#484C55;
+    height: 1074px;
+    position: relative;
+    padding-top: 15vh;
+
+        &__text{
+            position: absolute;
+            margin: 25vh 0vh 0 65vh;
+            background-color:#484C55;
+            z-index: 2;
+        }
+        &__bild{
+            z-index: 1;
+        }
+        &__img{
+            height:70vh ;
+            width:55vw;
+            margin-left: -4.3vh;
+        }
+        &__weiß{
+            margin: 5vh 0 5vh  14vh ;
+            padding: 0 1rem ;
+            border-left: 4px solid #F2F2F2; 
+        }
+        &__15{
+            color: #BE1622;
+            font-size: 16px;
+            font-family: NeueHaasDisplayBold;
+        }
+        &__mehr-wohn{
+            font-size: 40px;
+            color: #F2F2F2;
+            font-family: neueHaasDisplayRoman;
+            width: 80%;
+        }
+        &__p{
+            font-size: 16px;
+            color: #F2F2F2;
+            font-family: neueHaasDisplayRoman;
+            padding-left: 8rem;
+            width: 85%;
+            line-height: 1.6;
+        }
+}
