--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -63,6 +63,8 @@
     src: url(../Font/NeueHaasDisplayXXThinItalic.ttf);
   }
 
+
+
 *{
     padding: 0;
     margin: 0;
@@ -154,6 +156,10 @@
             font-size: 18px;
             margin: 3rem 0 0 63rem;
     }
+    &__submit:hover{
+        background-color: #BE1622;
+        color: #F2F2F2;
+    }
     &__input{
             background: #FFFFFFD1 0% 0% no-repeat padding-box;
             border: 1px solid #A2A2A2;
@@ -212,7 +218,7 @@
         &__section{
             display:grid;
             width: 100%;
-            grid-template-columns: repeat(3,1fr );
+            grid-template-columns: repeat( 3 , 1fr );
             // justify-content: space-around;
             padding: 0 11rem 11rem 11rem;
             gap: 30px;
@@ -234,6 +240,7 @@
         &__cart-p{
             font-size: 22px;
             padding: 12px;
+            opacity: 0.6;
             font-family: neueHaasDisplayRoman;
         }
         &__objekt, &__wohnfläche{
@@ -253,7 +260,6 @@
         &__span-dunkel{
             padding-left: 7rem;
         }
-
         &__mehre-rfahren{
             display: flex;
             border-top: 2px solid #64645b2a ;
@@ -270,6 +276,7 @@
         &__phone-icon{
             padding-left: 0.7rem;
             color:#85857B ;
+            opacity: 0.4;
         }
 }
 
@@ -358,6 +365,10 @@
         font-family: NeueHaasDisplayBold;
         margin: 3rem 0 0 1.3rem;
     }
+    &__button:hover{
+        background-color: #BE1622;
+        color: #F2F2F2;
+    }
 }
 
 .rechteck37{
@@ -416,6 +427,7 @@
     }
 
 }
+
 .rechteck45{
     background-color: #F2F2F2;
     height: 775px;
