--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -86,7 +86,130 @@
           box-sizing: border-box;
 }
 
-.Nav {
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem 2rem;
+  z-index: 1;
+  background-color: #F9F9F9;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.nav a {
+  text-decoration: none;
+  color: #111111;
+  font-size: 16px;
+}
+
+.menu-items {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 7rem;
+}
+
+.Logo {
+  padding-left: 8rem;
+}
+
+.menu-item {
+  font-size: 1rem;
+  padding: 0.5em 1.5em;
+  -webkit-transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.menu-items li a:hover {
+  background-color: #BE1622;
+}
+
+.menu-btn {
+  position: relative;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+  z-index: 0;
+}
+
+.menu-btn__lines,
+.menu-btn__lines::before,
+.menu-btn__lines::after {
+  width: 1.5rem;
+  height: 0.1rem;
+  background-color: #111111;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.menu-btn__lines::before,
+.menu-btn__lines::after {
+  content: '';
+  position: absolute;
+}
+
+.menu-btn__lines::before {
+  -webkit-transform: translateY(-0.5rem);
+          transform: translateY(-0.5rem);
+}
+
+.menu-btn__lines::after {
+  -webkit-transform: translateY(0.5rem);
+          transform: translateY(0.5rem);
+}
+
+/* animation */
+.menu-btn.open .menu-btn__lines {
+  -webkit-transform: translateX(2rem);
+          transform: translateX(2rem);
+  background-color: transparent;
+}
+
+.menu-btn.open .menu-btn__lines::before {
+  -webkit-transform: rotate(45deg) translate(-1.5rem, 1.5rem);
+          transform: rotate(45deg) translate(-1.5rem, 1.5rem);
+  background-color: #000;
+}
+
+.menu-btn.open .menu-btn__lines::after {
+  -webkit-transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
+          transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
+  background-color: #000;
+}
+
+.header {
+  background: url(../img/component.png) center/cover no-repeat;
+  height: 80.5vh;
+  width: 100%;
+  position: static;
+  padding: 14.5rem 0 0 0;
+}
+
+.header__div {
+  background-color: #11111195;
+  height: 39vh;
+}
+
+.header__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,90 +219,25 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
-  padding: 0rem 10rem;
-  height: 10vh;
-  background: #F9F9F9 0% 0% no-repeat padding-box;
+  width: 90%;
+  padding: 2rem 0 0 10rem;
 }
 
-.Nav .checkbox {
-  display: none;
-}
-
-.Nav .nav-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  list-style: none;
-  padding-left: 10px;
-}
-
-.Nav .nav-links .nav-link {
-  font-family: neueHaasDisplayRoman;
-  font-size: 1rem;
-  list-style-type: none;
-}
-
-.Nav .nav-links .nav-link a {
-  padding: 1rem .9rem;
-  color: #323A45;
-  text-decoration: none;
-}
-
-.Nav .nav-links .nav-link a:hover {
-  background: #be1622;
-  color: #fff;
-  border-radius: 4px;
-}
-
-.header {
-  background: url(../img/component.png) no-repeat center;
-  background-size: cover;
-  height: 75.3vh;
-  position: relative;
-  top: -39px;
-}
-
-.header__inputs {
-  position: relative;
-  top: 35.5vh;
+.header__input {
+  width: 256px;
+  height: 40px;
 }
 
 .header__p {
-  color: #fff;
+  color: #F9F9F9;
   font-size: 48px;
-  position: absolute;
-  top: -55px;
-  left: 11vw;
-  z-index: 1;
-  padding-bottom: 15%;
+  padding: 0rem 0 0 10rem;
 }
 
-.header__div {
-  text-align: center;
-  background: #1d1d1ba4;
-  height: 35vh;
-  padding-top: 5vh;
-}
-
-.header__div .header__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 83%;
-  margin: 0 8rem;
+.header__p2 {
+  color: #F9F9F9;
+  font-size: 48px;
+  padding: 0rem 0 0 10rem;
 }
 
 .header__submit {
@@ -188,7 +246,7 @@
   border: 1px solid #be1622;
   padding: 1rem 2rem;
   font-size: 18px;
-  margin: 3rem 0 0 63rem;
+  margin: 3rem 0 0 73rem;
 }
 
 .header__submit:hover {
@@ -196,19 +254,9 @@
   color: #F2F2F2;
 }
 
-.header__input {
-  background: #FFFFFFD1 0% 0% no-repeat padding-box;
-  border: 1px solid #A2A2A2;
-  height: 5vh;
-  width: 17.5vw;
-  padding: 0 0.7rem;
-  color: black;
-  margin-top: 5%;
-}
-
 .willkommen {
   height: 70vh;
-  margin-left: 20rem;
+  padding: 5rem 0 0 0;
   direction: ltr;
   color: #1D1D1B;
   opacity: 1;
@@ -216,13 +264,30 @@
 
 .willkommen__text {
   font-size: 48px;
-  width: 50%;
-  font-family: 'Karla', sans-serif;
-  font-family: 'Open Sans Condensed', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 8em;
+  font-family: NeueHaasDisplayXXThin;
 }
 
 .willkommen__p {
-  padding-top: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem 0 0 4rem;
   font-size: 16px;
   color: #1D1D1B;
   line-height: 1.8;
@@ -231,13 +296,13 @@
 
 .main {
   background-color: #F2F2F2;
-  padding-top: 10rem;
+  padding: 8rem 0 6rem 0;
   font-family: neueHaasDisplayRoman;
 }
 
 .main__div-überschrift {
   margin: 0 0 5vh  11vw;
-  padding-left: 1rem;
+  padding: 0 0 0 1rem;
   border-left: 4px solid #be1622;
 }
 
@@ -250,22 +315,21 @@
 .main__aktuelle {
   font-size: 40px;
   font-family: neueHaasDisplayRoman;
-  margin-bottom: 8rem;
 }
 
 .main__section {
   display: -ms-grid;
   display: grid;
-  width: 100%;
+  width: 90%;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  padding: 0 11rem 11rem 11rem;
-  gap: 30px;
+  padding: 0 0 0 10rem;
 }
 
 .main__cart {
   height: 489px;
   width: 350px;
+  margin: 2rem 0 0 1rem;
   background: #fff;
 }
 
@@ -339,11 +403,11 @@
   position: absolute;
   margin: 25vh 0vh 0 65vh;
   background-color: #484C55;
-  z-index: 2;
+  z-index: 0;
 }
 
 .rechteck33__bild {
-  z-index: 1;
+  z-index: 0;
 }
 
 .rechteck33__img {
@@ -570,29 +634,329 @@
   color: #F2F2F2;
 }
 
-.footer {
-  height: 8vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #F2F2F2;
-  border-top: 2px solid #85857B;
-  margin: 0rem 9rem;
-  font-family: NeueHaasDisplayMediumItalic;
-  padding-top: 1.5rem;
-}
-
-.footer__design {
-  padding-right: 3rem;
-}
-
-.footer__logo {
-  height: 17px;
-  width: 82px;
-}
-
-.footer__Impressum {
-  padding-left: 46rem;
-  padding-right: 3rem;
+@media screen and (max-width: 480px) {
+  .nav a {
+    font-size: 1rem;
+    color: #fff;
+  }
+  .menu-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #000;
+  }
+  .menu-items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    left: 0;
+    height: 100vh;
+    -webkit-transform: translateX(100vw);
+            transform: translateX(100vw);
+    background-color: #1D1D1DE8;
+    color: #000;
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    transition: -webkit-transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  }
+  .menu-items.open {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    color: #111111;
+  }
+  .menu-items li {
+    width: 100vw;
+    height: 100%;
+  }
+  .menu-item {
+    color: #fff;
+    font-size: 5vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  .menu-item:hover {
+    color: #000;
+  }
+  .header {
+    padding: 0;
+    height: 97vh;
+    width: 100%;
+    position: static;
+    padding: 14.5rem 0 0 0;
+  }
+  .header__div {
+    background-color: #11111195;
+    height: 56vh;
+  }
+  .header__form {
+    display: block;
+    width: 50%;
+    padding: 0;
+  }
+  .header__input {
+    width: 386px;
+    height: 50px;
+    margin: 1.5rem 0.8rem 0 1.7rem;
+    padding: 1rem;
+  }
+  .header__p {
+    color: #F9F9F9;
+    font-size: 40px;
+    padding: 0;
+  }
+  .header__p2 {
+    color: #F9F9F9;
+    font-size: 40px;
+    padding: 0;
+  }
+  .header__submit {
+    background: none;
+    color: #fff;
+    border: 1px solid #be1622;
+    padding: 1rem 2rem;
+    font-size: 18px;
+    margin: 1.2rem 0 0 18.7rem;
+    text-align: end;
+  }
+  .willkommen {
+    padding: 0;
+    color: #1D1D1B;
+  }
+  .willkommen__text {
+    font-size: 32px;
+    padding: 1rem 0 0 1.5rem;
+    width: 70%;
+  }
+  .willkommen__p {
+    padding: 1rem 0 0 1.5rem;
+    font-size: 16px;
+    width: 85%;
+  }
+  .main {
+    padding-top: 5%;
+  }
+  .main__div-überschrift {
+    margin: 3rem 0 0 0.9rem;
+    padding: 0rem 0 0 0.6rem;
+  }
+  .main__projekte {
+    font-size: 12px;
+    padding-left: 1rem;
+  }
+  .main__aktuelle {
+    font-size: 28px;
+    margin-bottom: 0;
+    padding-left: 1rem;
+  }
+  .main__section {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    padding: 0;
+  }
+  .main__cart {
+    width: 315px;
+    margin-bottom: 5rem;
+  }
+  .main__cart:nth-of-type(4), .main__cart:nth-of-type(5) {
+    display: none;
+  }
+  .main__cart-img {
+    width: 100%;
+  }
+  .main__mehre-rfahren {
+    padding-top: 0.6rem;
+  }
+  .main__button {
+    font-size: 19px;
+    padding: 0.2rem 0 0 1.5rem;
+  }
+  .main__phone-icon {
+    padding-left: 0.8rem;
+  }
+  .rechteck33 {
+    width: 100%;
+    padding: 0;
+    display: inline-block;
+    background-color: #484C55;
+    position: static;
+    padding: 0;
+  }
+  .rechteck33__text {
+    position: static;
+    margin: 0;
+    z-index: 0;
+  }
+  .rechteck33__text {
+    position: static;
+    margin: 0;
+    padding: 0 0 3rem 0;
+    z-index: 0;
+  }
+  .rechteck33__img {
+    height: 286px;
+    width: 332px;
+    margin: 3rem  0.8rem 0.3rem 0.8rem;
+  }
+  .rechteck33__weiß {
+    margin: 0 0 0 0.5rem;
+    padding: 0 0 0 1rem;
+  }
+  .rechteck33__15 {
+    color: #BE1622;
+    font-size: 12px;
+  }
+  .rechteck33__mehr-wohn {
+    font-size: 28px;
+    width: 80%;
+  }
+  .rechteck33__p {
+    font-size: 16px;
+    color: #D5D5D5;
+    padding: 0.5rem 0 0  1.8rem;
+    width: 90%;
+    line-height: 1.5;
+  }
+  .rechteck35 {
+    padding: 0;
+    height: 70vh;
+    margin: 8rem 0 2rem 0;
+  }
+  .rechteck35__überschrift {
+    margin: 0 0 0 0.3rem;
+    padding: 0 0 0 0.1rem;
+  }
+  .rechteck35__rot {
+    font-size: 12px;
+    padding: 0 0 0 1rem;
+  }
+  .rechteck35__marktrecht {
+    font-size: 28px;
+    width: 100%;
+    padding: 0 0 0 1rem;
+  }
+  .rechteck35__p {
+    font-size: 16px;
+    line-height: 1.8;
+    padding: 1rem  1.5rem;
+  }
+  .rechteck35__button {
+    padding: 1rem 1rem;
+    margin: 0rem 0 3rem 1.3rem;
+  }
+  .rechteck37 {
+    display: block;
+    height: 100%;
+    padding: 0;
+  }
+  .rechteck37__div-img, .rechteck37__div-text {
+    width: 100%;
+  }
+  .rechteck37__img {
+    padding: 1rem 0 0 0;
+    height: 386px;
+    width: 350px;
+    margin: 0rem  0.2rem;
+  }
+  .rechteck37__überschrift {
+    margin: 0 0 0 0.4rem;
+    padding: 0 0 0 0.8rem;
+  }
+  .rechteck37__rot {
+    font-size: 12px;
+  }
+  .rechteck37__unser {
+    font-size: 28px;
+    width: 90%;
+  }
+  .rechteck37__ul {
+    padding: 0 2rem 0 1.2rem;
+  }
+  .rechteck37__item {
+    line-height: 1;
+    padding: 0;
+  }
+  .rechteck45 {
+    width: 100%;
+    padding: 0;
+    height: 100%;
+  }
+  .rechteck45__überschrift {
+    display: block;
+  }
+  .rechteck45__data, .rechteck45__inputs-div {
+    width: 100%;
+  }
+  .rechteck45__text {
+    padding: 3rem 0 2rem 1.5rem;
+  }
+  .rechteck45__ul {
+    padding: 2rem;
+    display: block;
+  }
+  .rechteck45__inputs-div {
+    gap: 0px;
+  }
+  .rechteck45__text-input, .rechteck45__text-input2 {
+    height: 40px;
+    width: 332px;
+    margin: 1rem 0.9rem;
+  }
+  .rechteck45__email-input {
+    height: 40px;
+    width: 332px;
+    margin: 1rem 0.9rem;
+  }
+  .rechteck45__nachricht-input {
+    height: 25vh;
+    width: 332px;
+    padding-bottom: 20vh;
+    padding-left: 0.8rem;
+    margin: 1rem 0.9rem;
+  }
+  .rechteck45__button {
+    padding: 1.1rem 2rem;
+    margin: 1rem 0 3rem 8.4rem;
+  }
+  .footer {
+    display: none;
+    padding: 0;
+    width: 100%;
+    height: 20vh;
+    position: static;
+  }
+  .footer__ul {
+    display: block;
+    background-color: #F2F2F2;
+    list-style-type: none;
+  }
+  .footer__design {
+    padding-right: 0;
+  }
+  .footer__logo {
+    height: 17px;
+    width: 82px;
+  }
+  .footer__Impressum {
+    padding-left: 0rem;
+    padding-right: 3rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
