--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,122 +70,173 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-.Nav{
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
+    padding: 1rem 2rem;
+    z-index: 1;
+    background-color: #F9F9F9;
+     backdrop-filter: blur(5px);
+  }
+  
+  .nav a {
+    text-decoration: none;
+    color: #111111;
+    font-size: 16px;
+  }
+  
+  .menu-items {
+    list-style: none;
+    display: flex;
     align-items: center;
-     width: 100%;
-     padding: 0rem 10rem;
-     height: 10vh;
-     background: #F9F9F9 0% 0% no-repeat padding-box;
-
-
-    .checkbox{
-        display: none;
-    }
-
-    .nav-links{
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        list-style: none;
-        padding-left: 10px;
+    padding-right: 7rem;
+  }
+  .Logo{
+      padding-left: 8rem;
+  }
+  
+  .menu-item{
+    font-size: 1rem;
+    padding: 0.5em 1.5em;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  }
+  
+  .menu-items li a:hover {
+    background-color: #BE1622;
+  }
+  
+  .menu-btn {
+    position: relative;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
+    z-index: 0;
     
-        .nav-link{ 
-            font-family: neueHaasDisplayRoman;
-            
-            font-size: 1rem;
-            list-style-type:none ;
-                a{
-                    padding:1rem .9rem;
-                    color: #323A45;
-                    text-decoration: none;
-                    // font-family: 'Karla', sans-serif;
-                }
-                a:hover{
-                    background: rgba(190,22,34,1);
-                    color: #fff;
-                    border-radius: 4px;
-            }
-         }
-    }
+  }
+  .menu-btn__lines,
+  .menu-btn__lines::before,
+  .menu-btn__lines::after {
+    width: 1.5rem;
+    height: 0.1rem;
+    background-color: #111111;
+    transition: all 0.5s ease-in-out;
+  }
+  .menu-btn__lines::before,
+  .menu-btn__lines::after {
+    content: '';
+    position: absolute;
+  }
+  .menu-btn__lines::before {
+    transform: translateY(-0.5rem);
+  }
+  .menu-btn__lines::after {
+    transform: translateY(0.5rem);
+  }
+  /* animation */
+  .menu-btn.open .menu-btn__lines {
+    transform: translateX(2rem);
+    background-color: transparent;
+  }
+  .menu-btn.open .menu-btn__lines::before {
+    transform: rotate(45deg) translate(-1.5rem, 1.5rem);
+    background-color: #000;
+  }
+  .menu-btn.open .menu-btn__lines::after {
+    transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
+    background-color: #000;
+  }
+  
 
-}
+
 
 .header{
-    background: url(../img/component.png)no-repeat center   ;
-    background-size: cover;
-    height: 75.3vh;
-    position: relative;
-    top: -39px;
+        background:  url(../img/component.png)center/ cover no-repeat     ;
+        height: 80.5vh;
+        width: 100%;
+        position: static;
+        padding:14.5rem 0 0 0 ;
 
-        &__inputs{
-            position: relative;
-            top: 35.5vh;
+        &__div{
+            background-color: #11111195;
+            height: 39vh;
+            
+            // padding: 1% 25%; 
+            // margin: 5%;
+        }
+        &__form{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+            padding:2rem 0 0 10rem;
+        }
+        &__input{
+             width: 256px;
+            height: 40px;
         }
         &__p{
-            color: #fff;
+            color: #F9F9F9;
+            // position: absolute;
             font-size: 48px;
-            position: absolute;
-            top: -55px;
-            left: 11vw;
-            z-index: 1;
-            padding-bottom: 15%;
-        
+            padding: 0rem 0 0 10rem;
+            // margin-top: -5%;
         }
-        &__div{
-            text-align: center;
-            background: #1d1d1ba4;
-            height: 35vh;
-            padding-top: 5vh;
-        
-                .header__form{
-                    display: flex;
-                    justify-content: space-evenly;
-                    align-items: center;
-                    width: 83%;
-                    margin: 0 8rem;   
-            }
-    }
-    &__submit{
+
+        &__p2{
+            color: #F9F9F9;
+            // position: absolute;
+            font-size: 48px;
+            padding: 0rem 0 0 10rem;
+            // margin-top: -5%;
+        }
+        &__submit{
             background: none;
             color: #fff;
             border: 1px solid rgba(190,22,34,1);
             padding: 1rem 2rem;
             font-size: 18px;
-            margin: 3rem 0 0 63rem;
-    }
-    &__submit:hover{
-        background-color: #BE1622;
-        color: #F2F2F2;
-    }
-    &__input{
-            background: #FFFFFFD1 0% 0% no-repeat padding-box;
-            border: 1px solid #A2A2A2;
-            height: 5vh;
-            width: 17.5vw;
-            padding: 0 0.7rem;
-            color: black;
-            margin-top: 5%;
-    }
+             margin: 3rem 0 0 73rem;
+                }
+                &__submit:hover{
+                    background-color: #BE1622;
+                    color: #F2F2F2;
+                }
+           
+   
 }
 
 
 .willkommen{
     height: 70vh;
-    margin-left: 20rem;
+    padding: 5rem 0 0 0 ;
+    // margin-left: 20rem;
+    //  padding-left: 50%;
+    
     direction: ltr;
     color: #1D1D1B;
     opacity: 1;
     &__text{
         font-size: 48px;
-        width: 50%;
-        font-family: 'Karla', sans-serif;;
-        font-family: 'Open Sans Condensed', sans-serif;
-    }
+        display:flex ;
+        justify-content: center;
+        align-items: center;
+        padding: 0 8em;
+        font-family: NeueHaasDisplayXXThin; 
+
+       }
     &__p{
-        padding-top: 12px;
+        display:flex ;
+        justify-content: center;
+        align-items: center;
+        // padding-top: 0;
+        padding: 1rem 0 0 4rem;
         font-size: 16px;
         color: #1D1D1B;
         line-height: 1.8;
@@ -196,11 +247,11 @@
 
 .main{
     background-color: #F2F2F2;
-    padding-top: 10rem;
+    padding: 8rem 0 6rem 0;
     font-family: neueHaasDisplayRoman;
         &__div-überschrift{
             margin: 0 0 5vh  11vw ;
-            padding-left: 1rem;
+            padding: 0 0 0 1rem;
             border-left: 4px solid rgba(190,22,34,1);
         }
         &__projekte{
@@ -212,22 +263,24 @@
         &__aktuelle{
             font-size: 40px;
             font-family: neueHaasDisplayRoman;
-            margin-bottom: 8rem;
+            
         }
 
         &__section{
             display:grid;
-            width: 100%;
+            width: 90%;
             grid-template-columns: repeat( 3 , 1fr );
             // justify-content: space-around;
-            padding: 0 11rem 11rem 11rem;
-            gap: 30px;
+            padding: 0 0 0 10rem;
+            //padding: 0 11rem 11rem 11rem;
+            //gap: 30px;
             
         }
 
         &__cart{
             height: 489px;
             width: 350px;
+            margin: 2rem 0 0 1rem;
             // border: 1px solid #000;
             background: #fff;
         
@@ -291,10 +344,10 @@
             position: absolute;
             margin: 25vh 0vh 0 65vh;
             background-color:#484C55;
-            z-index: 2;
+            z-index: 0;
         }
         &__bild{
-            z-index: 1;
+            z-index: 0;
         }
         &__img{
             height:70vh ;
@@ -494,25 +547,398 @@
     }
 }
 
-.footer{
-     height: 8vh;
-    display: flex;
-    background-color: #F2F2F2;
-    border-top: 2px solid #85857B;
-    margin: 0rem 9rem;
-    font-family: NeueHaasDisplayMediumItalic;
-    padding-top: 1.5rem;
-    &__design{
-        padding-right: 3rem;
-    }
-    &__logo{
-        height: 17px;
-        width: 82px;
-        // padding-left: 1rem;
-    }
-    &__Impressum{
-        padding-left: 46rem;
-        padding-right: 3rem;
-    }
+// .footer{
+//      height: 8vh;
+//     display: flex;
+//     background-color: #F2F2F2;
+//     border-top: 2px solid #85857B;
+//     margin: 0rem 9rem;
+//     font-family: NeueHaasDisplayMediumItalic;
+//     padding-top: 1.5rem;
+//     &__design{
+//         padding-right: 3rem;
+//     }
+//     &__logo{
+//         height: 17px;
+//         width: 82px;
+//         // padding-left: 1rem;
+//     }
+//     &__Impressum{
+//         padding-left: 46rem;
+//         padding-right: 3rem;
+//     }
   
-}
+// }
+
+
+
+@media screen and (max-width:480px){
+    .nav a {
+        font-size: 1rem;
+        color: #fff;
+      }
+      .menu-btn {
+        display: flex;
+        color: #000;
+      }
+      .menu-items {
+        flex-direction: column;
+        justify-content: space-around;
+        position: absolute;
+        top: 5rem;
+        right: 0;
+        left: 0;
+        height: 100vh;
+        transform: translateX(100vw);
+        background-color: #1D1D1DE8;
+        color: #000;
+        transition: transform 0.3s ease-in-out;
+      }
+      .menu-items.open {
+        transform: translateX(0);
+        color: #111111;
+      }
+      .menu-items li {
+        width: 100vw;
+        height: 100%;
+        
+      }
+      .menu-item {
+        color: #fff;
+        font-size: 5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        // opacity: 3;
+      }
+      .menu-item:hover {
+        color: #000;
+      }
+
+      .header{
+        // height: 100vh;
+        //background: url(../img/component.png) no-repeat   35% 100%   ;
+        // background: transparent url(../img/component.png) 0% 0% no-repeat;
+        padding: 0;
+        height: 97vh;
+        width: 100%;
+        position: static;
+        padding:14.5rem 0 0 0 ;
+
+        &__div{
+            background-color: #11111195;
+            height: 56vh;
+        }
+        &__form{
+            display: block;
+            width: 50%;
+            padding: 0 ;
+        }
+        &__input{
+            width: 386px;
+            height: 50px;
+            margin: 1.5rem 0.8rem 0 1.7rem;
+            padding: 1rem;
+        }
+        &__p{
+            color: #F9F9F9;
+            font-size: 40px;
+            padding:0;
+        }
+
+        &__p2{
+            color: #F9F9F9;
+            font-size: 40px;
+            padding: 0 ;
+        }
+        &__submit{
+            background: none;
+           color: #fff;
+           border: 1px solid rgba(190,22,34,1);
+           padding: 1rem 2rem;
+           font-size: 18px;
+           margin: 1.2rem 0 0 18.7rem;
+           text-align: end;
+        }
+       
+
+      }
+
+      .willkommen{
+        // height: 70vh;
+            padding: 0;
+            color: #1D1D1B;
+            // opacity: 1;
+            &__text{
+                font-size: 32px;
+                padding: 1rem 0 0 1.5rem;
+                width: 70%;
+            }
+            &__p{
+                // padding-top: 12px;
+                padding: 1rem 0 0 1.5rem;
+                font-size: 16px;
+                width: 85%;   
+            }
+
+            //     .willkommen{
+//         // width: 100%;
+//             margin: 0;
+//             padding: 5rem  1.2rem;
+//             height: 70vh;
+//             &__text{
+//                 font-size: 32px;
+
+//             &::after{
+//                 content:' Allgeier Wohnbau – das ist ein Unternehmen mit Tradition und Weitsicht. Unser Familienbetrieb, 1972 gegründet, vermittelt seit fast 50 Jahren Menschen in Immobilien. Unter der Leitung von Geschäftsführer Alexander Vonalt vermitteln wir nicht nur Bestandsimmobilien, sondern entwickeln und setzen auch Wohnprojekte in der Region Freiburg im Breisgau, Gundelfingen und Umgebung um.';
+//                 padding: 3rem 2rem 0rem 1.2rem;
+//                 position: absolute;
+//                 left: 0;
+//                 font-size: 16px;
+//                 line-height: 1.6;
+//                 font-family: neueHaasDisplayRoman;
+//                 // padding: 2rem 0;
+//                 color: #1D1D1B;
+//             }
+//         }
+      }
+    
+    
+
+  .main{
+      //padding: 2rem 0 0 0rem;
+      //width: 100%;
+       //padding: 0;
+       padding-top: 5%;
+        &__div-überschrift{
+            margin: 3rem 0 0 0.9rem   ;
+            padding:0rem 0 0 0.6rem ;
+        }
+        &__projekte{
+            font-size: 12px;
+            padding-left: 1rem;
+        }
+        &__aktuelle{
+            font-size: 28px;
+            margin-bottom: 0;
+            padding-left: 1rem;
+        }
+        &__section{
+            display:grid;
+            grid-template-columns: repeat(1,1fr );
+            padding:0;
+        }
+        &__cart{
+            width: 315px;
+            margin-bottom: 5rem;
+            //margin-left: -0.7rem;
+        
+        }
+        &__cart:nth-of-type(4), 
+        &__cart:nth-of-type(5){
+           display: none;
+        }
+
+        &__cart-img{
+            width: 100%; 
+        }
+        &__mehre-rfahren{
+            padding-top: 0.6rem;
+        }
+        &__button{
+            font-size: 19px;
+            padding: 0.2rem 0 0 1.5rem;
+        }
+        &__phone-icon{
+            padding-left: 0.8rem;
+           
+        }
+  }
+
+  .rechteck33{
+      width: 100%;
+            padding: 0;
+    //      width: 100%;
+            display: inline-block;
+        // display: none;
+            background-color:#484C55;
+        // height: 100%;
+            position: static;
+            padding: 0;
+        &__text{
+            position: static;
+            margin: 0;
+            z-index: 0;
+        }
+        &__text{
+            position: static;
+            margin: 0;
+            padding: 0 0 3rem 0;
+            z-index: 0;
+        }
+
+        &__img{
+            height:286px ;
+            width:332px;
+            margin:3rem  0.8rem 0.3rem 0.8rem ;
+        }
+        &__weiß{
+            margin:0 0 0 0.5rem ;
+            padding: 0 0 0 1rem ; 
+        }
+        &__15{
+            color: #BE1622;
+            font-size: 12px;
+        }
+        &__mehr-wohn{
+            font-size: 28px;
+            width: 80%;
+        }
+        &__p{
+            font-size: 16px;
+            color: #D5D5D5;
+            padding: 0.5rem 0 0  1.8rem;
+            width: 90%;
+            line-height:1.5;
+        }
+  }
+
+   .rechteck35{
+       //width: 100%;
+        padding: 0;
+        height: 70vh;
+        margin: 8rem 0 2rem 0 ;
+        // padding: 5rem 0 0 0.3rem;
+    &__überschrift{
+        margin: 0 0 0 0.3rem;
+        padding: 0 0 0 0.1rem ;
+    }
+    &__rot{
+        font-size: 12px;
+        padding: 0 0 0 1rem;
+    }
+    &__marktrecht{
+        font-size: 28px;
+        width: 100%;
+        padding: 0 0 0 1rem;
+    }
+    &__p{
+        font-size: 16px;
+        line-height: 1.8;
+        padding: 1rem  1.5rem;
+    }
+    &__button{
+        padding: 1rem 1rem;
+        margin: 0rem 0 3rem 1.3rem;
+    }
+   }
+   .rechteck37{
+       //width: 100%;
+        display: block;
+         height: 100%;
+        padding: 0;
+    &__div-img,&__div-text{
+        width: 100%;
+    }
+    &__img{
+        padding: 1rem 0 0 0 ;
+        height:386px ;
+        width:350px;
+        margin:0rem  0.2rem ;
+    }
+    &__überschrift{
+        margin: 0 0 0 0.4rem ;
+        padding: 0 0 0 0.8rem;
+        
+    }
+    &__rot{
+        font-size: 12px;
+    }
+    &__unser{
+        font-size: 28px;
+         width: 90%;
+    }
+    &__ul{
+        padding:0 2rem 0 1.2rem;
+
+
+    }
+    &__item{
+        line-height: 1;
+        padding: 0 ;
+            }
+   }
+   .rechteck45{
+       width: 100%;
+    padding: 0;
+       height: 100%;
+    &__überschrift{
+        display: block;
+    }
+    &__data,&__inputs-div{
+        width: 100%;
+    }
+    &__text{
+        padding: 3rem 0 2rem 1.5rem;
+    }
+    &__ul{
+        padding: 2rem;
+        display: block;
+    }
+    &__inputs-div{
+        gap: 0px;
+    }
+    &__text-input,&__text-input2{
+        height: 40px;
+        width: 332px;
+        margin: 1rem 0.9rem;
+    }
+   
+    &__email-input{
+        height: 40px;
+        width: 332px;
+        margin: 1rem 0.9rem;
+    }
+    &__nachricht-input{
+        height: 25vh;
+        width: 332px;
+        padding-bottom: 20vh;
+        padding-left: 0.8rem;
+        margin: 1rem 0.9rem;
+    }
+    &__button{
+        padding: 1.1rem 2rem;
+        margin: 1rem 0 3rem 8.4rem; 
+    }
+   }
+
+   .footer{
+       display: none;
+        padding: 0;
+        width: 100%;
+        height: 20vh;
+        position: static;
+        &__ul{
+            display: block;
+            background-color: #F2F2F2;
+            list-style-type: none;
+    }
+        &__design{
+             padding-right: 0;
+        }
+        &__logo{
+            height: 17px;
+            width: 82px;
+        }
+        &__Impressum{
+            padding-left: 0rem;
+            padding-right: 3rem;
+        }
+   }
+
+
+
+     
+ }
