--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -80,33 +80,33 @@
     padding: 1rem 2rem;
     z-index: 1;
     background-color: #F9F9F9;
-     backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
   }
-  
-  .nav a {
+.nav a {
     text-decoration: none;
     color: #111111;
     font-size: 16px;
+  }
+  .Logo{
+      padding-left: 10rem;
   }
   
   .menu-items {
     list-style: none;
     display: flex;
     align-items: center;
-    padding-right: 7rem;
-  }
-  .Logo{
-      padding-left: 8rem;
+    padding-right: 10rem;
   }
   
   .menu-item{
     font-size: 1rem;
-    padding: 0.5em 1.5em;
+    padding: 1em ;
     transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
   }
   
-  .menu-items li a:hover {
+  .menu-item:hover {
     background-color: #BE1622;
+    color: #F9F9F9;
   }
   
   .menu-btn {
@@ -117,7 +117,7 @@
     width: 1.5rem;
     height: 1.5rem;
     cursor: pointer;
-    z-index: 0;
+    z-index: 1;
     
   }
   .menu-btn__lines,
@@ -130,7 +130,7 @@
   }
   .menu-btn__lines::before,
   .menu-btn__lines::after {
-    content: '';
+    content: "";
     position: absolute;
   }
   .menu-btn__lines::before {
@@ -139,7 +139,6 @@
   .menu-btn__lines::after {
     transform: translateY(0.5rem);
   }
-  /* animation */
   .menu-btn.open .menu-btn__lines {
     transform: translateX(2rem);
     background-color: transparent;
@@ -152,7 +151,7 @@
     transform: rotate(-45deg) translate(-1.5rem, -1.5rem);
     background-color: #000;
   }
-  
+
 
 
 
@@ -573,13 +572,17 @@
 
 
 @media screen and (max-width:480px){
+    
     .nav a {
-        font-size: 1rem;
         color: #fff;
       }
+        .Logo{
+        width: 171px;
+        height: 33px;
+        padding: 0;
+    }
       .menu-btn {
         display: flex;
-        color: #000;
       }
       .menu-items {
         flex-direction: column;
@@ -588,83 +591,85 @@
         top: 5rem;
         right: 0;
         left: 0;
-        height: 100vh;
+        height: 90vh;
+        padding-right: 0;
         transform: translateX(100vw);
-        background-color: #1D1D1DE8;
-        color: #000;
+        background-color: rgba(0, 0, 0, 0.482);
         transition: transform 0.3s ease-in-out;
       }
       .menu-items.open {
         transform: translateX(0);
-        color: #111111;
       }
       .menu-items li {
         width: 100vw;
         height: 100%;
-        
       }
       .menu-item {
-        color: #fff;
+        color: #ffffff;
         font-size: 5vh;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
         height: 100%;
-        // opacity: 3;
+        padding: 0.5em 1em;
       }
       .menu-item:hover {
-        color: #000;
+        color: #111111;
       }
+    
+    
+      
+     
 
-      .header{
-        // height: 100vh;
-        //background: url(../img/component.png) no-repeat   35% 100%   ;
-        // background: transparent url(../img/component.png) 0% 0% no-repeat;
-        padding: 0;
-        height: 97vh;
-        width: 100%;
-        position: static;
-        padding:14.5rem 0 0 0 ;
+//       .header{
+//         // height: 100vh;
+//         //background: url(../img/component.png) no-repeat   35% 100%   ;
+//         // background: transparent url(../img/component.png) 0% 0% no-repeat;
+//         padding: 0;
+//         height: 97vh;
+//         width: 100%;
+//         position: static;
+//         padding:14.5rem 0 0 0 ;
 
-        &__div{
-            background-color: #11111195;
-            height: 56vh;
-        }
-        &__form{
-            display: block;
-            width: 50%;
-            padding: 0 ;
-        }
-        &__input{
-            width: 386px;
-            height: 50px;
-            margin: 1.5rem 0.8rem 0 1.7rem;
-            padding: 1rem;
-        }
-        &__p{
-            color: #F9F9F9;
-            font-size: 40px;
-            padding:0;
-        }
+//         &__div{
+//             background-color: #11111195;
+//             height: 56vh;
+//         }
+//         &__form{
+//             display: block;
+//             width: 50%;
+//             padding: 0 ;
+//         }
+//         &__input{
+//             width: 386px;
+//             height: 50px;
+//             margin: 1.5rem 0.8rem 0 2.4rem;
+//             padding: 1rem;
+//         }
+//         &__p{
+//             color: #F9F9F9;
+//             font-size: 40px;
+//             padding:0 0 0 1rem;
+//         }
 
-        &__p2{
-            color: #F9F9F9;
-            font-size: 40px;
-            padding: 0 ;
-        }
-        &__submit{
-            background: none;
-           color: #fff;
-           border: 1px solid rgba(190,22,34,1);
-           padding: 1rem 2rem;
-           font-size: 18px;
-           margin: 1.2rem 0 0 18.7rem;
-           text-align: end;
-        }
+//         &__p2{
+//             color: #F9F9F9;
+//             font-size: 40px;
+//             padding:0 0 0 1rem;
+//         }
+//         &__submit{
+//             background: none;
+//            color: #fff;
+//            border: 1px solid rgba(190,22,34,1);
+//            padding: 1rem 2rem;
+//            font-size: 18px;
+//            margin: 1.2rem 0 0 18.7rem;
+//            text-align: end;
+//         }
        
 
-      }
+//       }
 
       .willkommen{
         // height: 70vh;
@@ -713,8 +718,8 @@
        //padding: 0;
        padding-top: 5%;
         &__div-überschrift{
-            margin: 3rem 0 0 0.9rem   ;
-            padding:0rem 0 0 0.6rem ;
+            margin: 3rem 0 0 0.5rem   ;
+            padding:0rem 0 0 0.2rem ;
         }
         &__projekte{
             font-size: 12px;
@@ -731,8 +736,8 @@
             padding:0;
         }
         &__cart{
-            width: 315px;
-            margin-bottom: 5rem;
+            width: 425px;
+            margin: 1rem 0 5rem 1.5rem;
             //margin-left: -0.7rem;
         
         }
@@ -749,7 +754,7 @@
         }
         &__button{
             font-size: 19px;
-            padding: 0.2rem 0 0 1.5rem;
+            padding: 0.2rem 0 0 8rem;
         }
         &__phone-icon{
             padding-left: 0.8rem;
@@ -780,8 +785,8 @@
         }
 
         &__img{
-            height:286px ;
-            width:332px;
+            height:350px ;
+            width:450px;
             margin:3rem  0.8rem 0.3rem 0.8rem ;
         }
         &__weiß{
@@ -812,7 +817,7 @@
         margin: 8rem 0 2rem 0 ;
         // padding: 5rem 0 0 0.3rem;
     &__überschrift{
-        margin: 0 0 0 0.3rem;
+        margin: 0 0 0 0.5rem;
         padding: 0 0 0 0.1rem ;
     }
     &__rot{
@@ -837,15 +842,15 @@
    .rechteck37{
        //width: 100%;
         display: block;
-         height: 100%;
+         height: 100vh;
         padding: 0;
     &__div-img,&__div-text{
         width: 100%;
     }
     &__img{
         padding: 1rem 0 0 0 ;
-        height:386px ;
-        width:350px;
+        height:350px ;
+        width:460px;
         margin:0rem  0.2rem ;
     }
     &__überschrift{
@@ -872,7 +877,7 @@
    }
    .rechteck45{
        width: 100%;
-    padding: 0;
+        padding: 0;
        height: 100%;
     &__überschrift{
         display: block;
@@ -882,6 +887,7 @@
     }
     &__text{
         padding: 3rem 0 2rem 1.5rem;
+        width: 80%;
     }
     &__ul{
         padding: 2rem;
@@ -890,53 +896,48 @@
     &__inputs-div{
         gap: 0px;
     }
-    &__text-input,&__text-input2{
-        height: 40px;
-        width: 332px;
-        margin: 1rem 0.9rem;
+    &__text-input,&__text-input2,&__email-input{
+        height: 50px;
+        width: 410px;
+        margin: 1rem 1.9rem;
     }
    
-    &__email-input{
-        height: 40px;
-        width: 332px;
-        margin: 1rem 0.9rem;
-    }
     &__nachricht-input{
         height: 25vh;
-        width: 332px;
+        width: 410px;
         padding-bottom: 20vh;
         padding-left: 0.8rem;
-        margin: 1rem 0.9rem;
+        margin: 1rem 1.9rem;
     }
     &__button{
         padding: 1.1rem 2rem;
-        margin: 1rem 0 3rem 8.4rem; 
+        margin: 1rem 0 3rem 14.4rem; 
     }
    }
 
-   .footer{
-       display: none;
-        padding: 0;
-        width: 100%;
-        height: 20vh;
-        position: static;
-        &__ul{
-            display: block;
-            background-color: #F2F2F2;
-            list-style-type: none;
-    }
-        &__design{
-             padding-right: 0;
-        }
-        &__logo{
-            height: 17px;
-            width: 82px;
-        }
-        &__Impressum{
-            padding-left: 0rem;
-            padding-right: 3rem;
-        }
-   }
+//    .footer{
+//        display: none;
+//         padding: 0;
+//         width: 100%;
+//         height: 20vh;
+//         position: static;
+//         &__ul{
+//             display: block;
+//             background-color: #F2F2F2;
+//             list-style-type: none;
+//     }
+//         &__design{
+//              padding-right: 0;
+//         }
+//         &__logo{
+//             height: 17px;
+//             width: 82px;
+//         }
+//         &__Impressum{
+//             padding-left: 0rem;
+//             padding-right: 3rem;
+//         }
+//    }
 
 
 
