--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -110,6 +110,10 @@
   font-size: 16px;
 }
 
+.Logo {
+  padding-left: 10rem;
+}
+
 .menu-items {
   list-style: none;
   display: -webkit-box;
@@ -118,22 +122,19 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-right: 7rem;
-}
-
-.Logo {
-  padding-left: 8rem;
+  padding-right: 10rem;
 }
 
 .menu-item {
   font-size: 1rem;
-  padding: 0.5em 1.5em;
+  padding: 1em;
   -webkit-transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-.menu-items li a:hover {
+.menu-item:hover {
   background-color: #BE1622;
+  color: #F9F9F9;
 }
 
 .menu-btn {
@@ -148,7 +149,7 @@
   width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
-  z-index: 0;
+  z-index: 1;
 }
 
 .menu-btn__lines,
@@ -163,7 +164,7 @@
 
 .menu-btn__lines::before,
 .menu-btn__lines::after {
-  content: '';
+  content: "";
   position: absolute;
 }
 
@@ -177,7 +178,6 @@
           transform: translateY(0.5rem);
 }
 
-/* animation */
 .menu-btn.open .menu-btn__lines {
   -webkit-transform: translateX(2rem);
           transform: translateX(2rem);
@@ -636,14 +636,17 @@
 
 @media screen and (max-width: 480px) {
   .nav a {
-    font-size: 1rem;
     color: #fff;
+  }
+  .Logo {
+    width: 171px;
+    height: 33px;
+    padding: 0;
   }
   .menu-btn {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    color: #000;
   }
   .menu-items {
     -webkit-box-orient: vertical;
@@ -656,11 +659,11 @@
     top: 5rem;
     right: 0;
     left: 0;
-    height: 100vh;
+    height: 90vh;
+    padding-right: 0;
     -webkit-transform: translateX(100vw);
             transform: translateX(100vw);
-    background-color: #1D1D1DE8;
-    color: #000;
+    background-color: rgba(0, 0, 0, 0.482);
     -webkit-transition: -webkit-transform 0.3s ease-in-out;
     transition: -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
@@ -669,14 +672,13 @@
   .menu-items.open {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    color: #111111;
   }
   .menu-items li {
     width: 100vw;
     height: 100%;
   }
   .menu-item {
-    color: #fff;
+    color: #ffffff;
     font-size: 5vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -689,50 +691,10 @@
             align-items: center;
     width: 100%;
     height: 100%;
+    padding: 0.5em 1em;
   }
   .menu-item:hover {
-    color: #000;
-  }
-  .header {
-    padding: 0;
-    height: 97vh;
-    width: 100%;
-    position: static;
-    padding: 14.5rem 0 0 0;
-  }
-  .header__div {
-    background-color: #11111195;
-    height: 56vh;
-  }
-  .header__form {
-    display: block;
-    width: 50%;
-    padding: 0;
-  }
-  .header__input {
-    width: 386px;
-    height: 50px;
-    margin: 1.5rem 0.8rem 0 1.7rem;
-    padding: 1rem;
-  }
-  .header__p {
-    color: #F9F9F9;
-    font-size: 40px;
-    padding: 0;
-  }
-  .header__p2 {
-    color: #F9F9F9;
-    font-size: 40px;
-    padding: 0;
-  }
-  .header__submit {
-    background: none;
-    color: #fff;
-    border: 1px solid #be1622;
-    padding: 1rem 2rem;
-    font-size: 18px;
-    margin: 1.2rem 0 0 18.7rem;
-    text-align: end;
+    color: #111111;
   }
   .willkommen {
     padding: 0;
@@ -752,8 +714,8 @@
     padding-top: 5%;
   }
   .main__div-überschrift {
-    margin: 3rem 0 0 0.9rem;
-    padding: 0rem 0 0 0.6rem;
+    margin: 3rem 0 0 0.5rem;
+    padding: 0rem 0 0 0.2rem;
   }
   .main__projekte {
     font-size: 12px;
@@ -772,8 +734,8 @@
     padding: 0;
   }
   .main__cart {
-    width: 315px;
-    margin-bottom: 5rem;
+    width: 425px;
+    margin: 1rem 0 5rem 1.5rem;
   }
   .main__cart:nth-of-type(4), .main__cart:nth-of-type(5) {
     display: none;
@@ -786,7 +748,7 @@
   }
   .main__button {
     font-size: 19px;
-    padding: 0.2rem 0 0 1.5rem;
+    padding: 0.2rem 0 0 8rem;
   }
   .main__phone-icon {
     padding-left: 0.8rem;
@@ -811,8 +773,8 @@
     z-index: 0;
   }
   .rechteck33__img {
-    height: 286px;
-    width: 332px;
+    height: 350px;
+    width: 450px;
     margin: 3rem  0.8rem 0.3rem 0.8rem;
   }
   .rechteck33__weiß {
@@ -840,7 +802,7 @@
     margin: 8rem 0 2rem 0;
   }
   .rechteck35__überschrift {
-    margin: 0 0 0 0.3rem;
+    margin: 0 0 0 0.5rem;
     padding: 0 0 0 0.1rem;
   }
   .rechteck35__rot {
@@ -863,7 +825,7 @@
   }
   .rechteck37 {
     display: block;
-    height: 100%;
+    height: 100vh;
     padding: 0;
   }
   .rechteck37__div-img, .rechteck37__div-text {
@@ -871,8 +833,8 @@
   }
   .rechteck37__img {
     padding: 1rem 0 0 0;
-    height: 386px;
-    width: 350px;
+    height: 350px;
+    width: 460px;
     margin: 0rem  0.2rem;
   }
   .rechteck37__überschrift {
@@ -906,6 +868,7 @@
   }
   .rechteck45__text {
     padding: 3rem 0 2rem 1.5rem;
+    width: 80%;
   }
   .rechteck45__ul {
     padding: 2rem;
@@ -914,49 +877,21 @@
   .rechteck45__inputs-div {
     gap: 0px;
   }
-  .rechteck45__text-input, .rechteck45__text-input2 {
-    height: 40px;
-    width: 332px;
-    margin: 1rem 0.9rem;
-  }
-  .rechteck45__email-input {
-    height: 40px;
-    width: 332px;
-    margin: 1rem 0.9rem;
+  .rechteck45__text-input, .rechteck45__text-input2, .rechteck45__email-input {
+    height: 50px;
+    width: 410px;
+    margin: 1rem 1.9rem;
   }
   .rechteck45__nachricht-input {
     height: 25vh;
-    width: 332px;
+    width: 410px;
     padding-bottom: 20vh;
     padding-left: 0.8rem;
-    margin: 1rem 0.9rem;
+    margin: 1rem 1.9rem;
   }
   .rechteck45__button {
     padding: 1.1rem 2rem;
-    margin: 1rem 0 3rem 8.4rem;
-  }
-  .footer {
-    display: none;
-    padding: 0;
-    width: 100%;
-    height: 20vh;
-    position: static;
-  }
-  .footer__ul {
-    display: block;
-    background-color: #F2F2F2;
-    list-style-type: none;
-  }
-  .footer__design {
-    padding-right: 0;
-  }
-  .footer__logo {
-    height: 17px;
-    width: 82px;
-  }
-  .footer__Impressum {
-    padding-left: 0rem;
-    padding-right: 3rem;
+    margin: 1rem 0 3rem 14.4rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
